--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -271,6 +271,7 @@ fra:
         groupable: 'Groupable'
         id: 'ID'
         is_debit: 'Débit'
+        journal_entries: 'Écritures'
         journals: 'Journaux'
         keep_entries: 'Garder les ecritures'
         label: 'Label'
@@ -1109,6 +1110,7 @@ fra:
         creator: 'Créateur'
         creator_id: 'Créateur'
         id: 'ID'
+        journal_records: 'Pièces comptables'
         lock_version: 'Version'
         records: 'Pièces comptables'
         started_on: 'Commencé le'
