--- a/config/locales/fra/pack.application.yml
+++ b/config/locales/fra/pack.application.yml
@@ -1,13 +1,12 @@
 fra:
-
   controllers:
     application:
       title: 'Application'
-
   helpers:
     application:
+      default_title: 'Ekylibre - {{controller}} - {{action}}'
       exit: 'Se déconnecter'
       print: 'Imprimer {{name}}'
-
+      title: '{{company_code}} - {{controller}} - {{action}}'
   views:
     application:
