--- a/config/locales/fra/pack.authentication.yml
+++ b/config/locales/fra/pack.authentication.yml
@@ -1,46 +1,44 @@
 fra:
-
   controllers:
     authentication:
       title: 'Authentification'
-
   helpers:
     authentication:
-
   views:
     authentication:
       login:
-        bad_browser:
-          explanation: 'Cette version de navigateur n''est pas supportée par Ekylibre. En utilisant ce navigateur, les pages ne seraient pas affichées correctement et des fonctionnalités seraient manquantes.'
-          proposal: 'S''il vous plait, envisagez de vous mettre à jour avec l''un de ces navigateurs récents :'
-          title: 'Il semblerai que vous utilisiez un navigateur obsolète'
-          wb:
-            chrome: 'Chrome'
-            firefox: 'Firefox'
-            ie: 'Internet Explorer'
-            opera: 'Opéra'
-            safari: 'Safari'
+        bad_browser:  #!
+          explanation: 'Cette version de navigateur n''est pas supportée par Ekylibre. En utilisant ce navigateur, les pages ne seraient pas affichées correctement et des fonctionnalités seraient manquantes.' #!
+          proposal: 'S''il vous plait, envisagez de vous mettre à jour avec l''un de ces navigateurs récents :' #!
+          title: 'Il semblerai que vous utilisiez un navigateur obsolète' #!
+          wb: #!
+            chrome: 'Chrome' #!
+            firefox: 'Firefox' #!
+            ie: 'Internet Explorer' #!
+            opera: 'Opéra' #!
+            safari: 'Safari' #!
+ #!
         connect: 'Entrer'
         download_firefox: 'Télécharger Mozilla Firefox...'
         locale: 'Langue'
-        lost_login: 'Nom d''utilisateur oublié ?'
-        lost_password: 'Mot de passe oublié ?'
+        lost_login: 'Nom d''utilisateur oublié ?' #!
+        lost_password: 'Mot de passe oublié ?' #!
         no_javascript: 'Votre navigateur ne supporte pas le javascript. Vous devez l''activer pour pouvoir utiliser le logiciel. Merci de votre compréhension.'
         password: 'Mot de passe'
         register: 'Créer une nouvelle société'
         title: 'Connexion'
         username: 'Nom d''utilisateur'
       register:
-        administrator: 'Administrateur'
-        company_name: 'Nom de votre société'
+        administrator: 'Administrateur' #!
+        company_name: 'Nom de votre société' #!
         company_name_example: 'SARL Martin et Fils'
-        company_siren_example: '012345678'
+        company_siren_example: '012345678' #!
         load_demo_data: 'Charger des données de tests'
         my_company: 'Saisissez les informations sur votre société'
         my_self: 'Saisissez les informations vous concernant'
         title: 'Enregistrer sa société'
         user_first_name_example: 'Jean'
-        user_last_name_example: 'MARTIN'
+        user_last_name_example: 'MARTIN' #!
         user_name_example: 'martinj'
         user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
         user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
