--- a/config/locales/fra/pack.resources.yml
+++ b/config/locales/fra/pack.resources.yml
@@ -1,58 +1,58 @@
 fra:
-
   controllers:
     resources:
       client_code: 'Code client'
       title: 'Ressources'
-
   helpers:
     resources:
-
   views:
     resources:
       employee:
         event_create: 'Ajouter un événement'
-        events:
+        events: 
           one: '1 événement'
           other: '{{count}} événements'
           zero: 'Aucun événement'
-        operations:
+        operations: 
           one: '1 travail'
           other: '{{count}} travaux'
           zero: 'Aucun travail'
         sale_order_create: 'Créer un nouveau devis'
-        sale_orders:
+        sale_orders: 
           one: '1 vente'
           other: '{{count}} ventes'
           zero: 'Aucune vente'
         title: 'Employé : {{label}}'
         user_update: 'Modifier la fiche'
+      # No defined action for this view !!!
       employee_create:
         title: 'Création d''un nouvel employé'
       _employee_form:
         select_user: '-- Sans utilisateur --'
+      # No defined action for this view !!!
       employee_update:
         title: 'Modification d''un employé'
       employees:
-        create: 'Créer un nouvel employé'
-        nb_employees:
-          one: '1 employé enregistré'
-          other: '{{count}} employés enregistrés'
-          zero: 'Aucun employé enregistré'
+        create: 'Créer un nouvel employé' #!
+        nb_employees:  #!
+          one: '1 employé enregistré' #!
+          other: '{{count}} employés enregistrés' #!
+          zero: 'Aucun employé enregistré' #!
+ #!
         title: 'Fiches des employés'
         user_create: 'Création d''un nouvel employé'
       _employees_search:
         search: 'Rechercher un employé'
         title: 'Recherche'
       index:
-        employees: 'Fiches employés'
-        human: 'Ressources humaines'
-        nb_employees:
+        employees: 'Fiches employés' #!
+        human: 'Ressources humaines' #!
+        nb_employees: 
           one: '1 employé'
           other: '{{count}} employés'
           zero: 'Aucun employé'
-        parameters: 'Paramètres'
-        professions: 'Professions'
+        parameters: 'Paramètres' #!
+        professions: 'Professions' #!
         title: 'Gestion des ressources'
       profession_create:
         title: 'Ajout d''une nouvelle profession'
