--- a/config/locales/fra/parameters.yml
+++ b/config/locales/fra/parameters.yml
@@ -10,6 +10,9 @@ fra:
       major_accounts:
         charges: 'Comptes de charges'
         products: 'Comptes de produits'
+      minor_accounts:
+        gains: 'Résultat de l''exercice (bénéfice)'
+        losses: 'Résultat de l''exercice (perte)'
       taxes_accounts:
         acquisition_taxes: 'Compte des taxes d''acquisitions intracommunautaires'
         assimilated_taxes: 'Compte des taxes assimilées'
