--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -18,6 +18,7 @@ jpn:
         #>groupable: 'Groupable'
         id: '唯一の番号'
         #>is_debit: 'Débit'
+        #>journal_entries: 'Écritures'
         #>journals: 'Journaux'
         #>keep_entries: 'Garder les ecritures'
         #>label: 'Label'
@@ -800,6 +801,7 @@ jpn:
         creator: '創始者'
         creator_id: '創始者'
         id: '唯一の番号'
+        #>journal_records: 'Pièces comptables'
         lock_version: '修正の番号'
         #>records: 'Pièces comptables'
         #>started_on: 'Commencé le'
